# zephyr

./: west.yml
arch/arm/core/: sys_fatal_error_handler.c  thread.c
boards/arm/nrf51dk_nrf51422/: nrf51dk_nrf51422.dts
boards/arm/nrf51dongle_nrf51422/: nrf51dongle_nrf51422.dts
boards/arm/nrf52832_mdk/: nrf52832_mdk.dts
boards/arm/nrf52833dk_nrf52833/: nrf52833dk_nrf52833.dts
boards/arm/nrf52840_blip/: nrf52840_blip.dts
boards/arm/nrf52840_mdk/: nrf52840_mdk.dts
boards/arm/nrf52840_papyr/: nrf52840_papyr.dts
boards/arm/nrf52840_pca10056/: nrf52840_pca10056.dts
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.simulator  Makefile  flash_simulator.c  flash_stm32.c  flash_stm32.h  flash_stm32f4x.c  flash_stm32l4x.c  nrf_qspi_nor.c  soc_flash_nrf.c  soc_flash_nrf5.c  spi_nor.c
dts/common/: common.dts  sim-flash.dtsi  sim-flash.overlay
include/: flash_map.h  fs.h
include/config/: config.h
include/dfu/: mcuboot.h
include/linker/: linker-defs.h
include/settings/: settings.h
kernel/: init.c
modules/: Kconfig
samples/hello_world/: CMakeLists.txt  prj.conf
scripts/dts/: extract_dts_includes.py
subsys/: CMakeLists.txt  Kconfig  Makefile
subsys/config/: Kconfig
subsys/dfu/: Kconfig  Makefile
subsys/fs/: fat_fs.c  fs.c  nffs_fs.c
subsys/logging/: CMakeLists.txt  Kconfig  log_backend_fs.c
subsys/nv_config/: Kconfig
subsys/nv_config/src/: CMakeLists.txt  config.c  config_cli.c  config_fcb.c  config_file.c  config_init.c  config_json_line.c  config_line.c  config_nmgr.c  config_priv.h  config_store.c
subsys/settings/: Kconfig
(+164 files in other folders)
